src/z80asm/z80asm2/t/20-preproc/expected/c_line_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/c_line_01.asm
Assembling t/20-preproc/input/c_line_01.asm...
t/20-preproc/input/c_line_01.asm:1:7: error: Expected line number after C_LINE
    c_line ; no c_line number
          ^
